# xiao-ble-localizer

./: CMakeLists.txt  LICENSE  README.md  prj.conf  sample.yaml
boards/: nrf54h20dk_nrf54h20_cpuppr.overlay
lib/heartbeat/: CMakeLists.txt  README.txt
lib/heartbeat/include/: heartbeat.h
lib/heartbeat/src/: heartbeat.c
nordic/: override.dtsi
src/: main.c  observer.c
